Downport to Java 11 (to ease WebFX/GWT port)